--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,7 +6,7 @@
 #    By: dly <dly@student.42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/12 14:22:17 by dly               #+#    #+#              #
-#    Updated: 2023/01/10 16:45:16 by dly              ###   ########.fr        #
+#    Updated: 2023/01/14 16:08:38 by dly              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@
 #                                                                              #
 ################################################################################
 
-SRCS_FILES		= main.c  file.c  map.c  error.c
+SRCS_FILES		= main.c  file.c  map.c  error.c  free.c
 SRCS_DIR		= srcs/
 M_SRCS			= $(addprefix $(SRCS_DIR), $(SRCS_FILES))
 M_OBJS			= $(M_SRCS:.c=.o)
@@ -27,7 +27,8 @@ M_OBJS			= $(M_SRCS:.c=.o)
 # B_OBJS			= $(B_SRCS:.c=.o)
 
 LIBFT_FILES		= ft_bzero.c  ft_calloc.c  ft_memset.c  ft_split.c \
-				  ft_strncmp.c  ft_strlen.c  ft_join.c
+				  ft_strncmp.c  ft_strlen.c  ft_strjoin.c  ft_strnstr.c \
+				  ft_strjoin_free.c
 LIBFT_DIR		= libft/
 L_SRCS			= $(addprefix $(LIBFT_DIR), $(LIBFT_FILES))
 L_OBJS			= $(L_SRCS:.c=.o)
@@ -39,14 +40,14 @@ GNL_OBJS		= $(GNL_SRCS:.c=.o)
 
 INCLUDE			= -I include/ 
 CC				= cc
-CFLAGS			= -Wall -Wextra -Werror
+# CFLAGS			= -Wall -Wextra -Werror
 
 RM				= rm -f
 AR				= ar rcs
 
-NAME			= pipex 
-HEADER			= include/pipex.h
-HEADER_B		= include/pipex_bonus.h
+NAME			= so_long 
+HEADER			= include/so_long.h
+# HEADER_B		= include/pipex_bonus.h
 
 ################################################################################
 #                                                                              #
@@ -60,8 +61,8 @@ all:			$(NAME)
 				@echo "Compiling: $<"
 				@$(CC) $(CFLAGS) $(INCLUDE) -c $< -o $@
 
-$(NAME):		$(L_OBJS) $(M_OBJS) $(HEADER)
-				@$(CC) $(M_OBJS) $(L_OBJS) -o $(NAME) 
+$(NAME):		$(L_OBJS) $(GNL_OBJS) $(M_OBJS) $(HEADER)
+				@$(CC) $(M_OBJS) $(GNL_OBJS) $(L_OBJS) -o $(NAME) 
 				@echo "so_long executable ready!"
 				
 # bonus: 			$(L_OBJS) $(GNL_OBJS) $(B_OBJS) $(HEADER_B)
